# unifi-monitoring

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: release.yml
deploy/: README.md  docker-compose.yaml  generate-compose.sh  generate-yaml.sh  truenas-deployment.yaml  truenas-values.yaml
docs/plans/: 2024-12-29-unifi-monitor-design.md  2024-12-30-ui-redesign.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: AccountMenu.tsx  EventList.tsx  EventRow.tsx  FilterBar.tsx  Login.tsx  Sidebar.tsx
frontend/src/hooks/: useTheme.ts
src/: lib.rs  main.rs  processor.rs
src/db/: mod.rs
src/unifi/: auth.rs  client.rs  error.rs  mod.rs  network.rs  protect.rs  system.rs  types.rs
src/web/: auth.rs  mod.rs
